# flask-vue-crud

./: .pre-commit-config.yaml  README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.vue  index.css  main.js
client/src/components/: BooksIndex.vue  BooksList.vue  HeaderNav.vue  HelloWorld.vue  ModalAddBook.vue  PingComponent.vue
client/src/router/: index.js
server/: README.md  environment.yaml  pyproject.toml  setup.cfg
server/src/server/: __init__.py  auth.py  blog.py  books.py  db.py
server/src/server/templates/blog/: create.html  index.html  update.html
server/tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_books.py  test_db.py  test_factory.py
