[tool.poetry]
name = "flask-vue-crud-server"
version = "0.1.0"
description = ""
authors = ["Brian Jenkins <...@....com>"]
packages = [
    { include = "flaskr", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
Flask = "^2.1.1"
python-dotenv = "^0.20.0"
watchdog = "^2.1.7"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = { version = "^22.3.0", allow-prereleases = true }
mypy = "^0.941"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
